@@ -1,10 +1,12 @@
 package com.meg.atable.service;
 
+import com.meg.atable.api.model.CategoryType;
 import com.meg.atable.api.model.ListLayoutType;
 import com.meg.atable.api.model.ListType;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.EnumMap;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -17,7 +19,7 @@ public class ShoppingListProperties {
 
     private String testValue;
 
-    private final Map<String, String> rawDefaultLayouts = new HashMap<String, String>();
+    private final Map<String, String> rawDefaultLayouts = new HashMap<>();
     private Map<ListType, ListLayoutType> defaultLayouts;
 
     private String frequentCategoryName = "frequent";
@@ -25,6 +27,11 @@ public class ShoppingListProperties {
     private String uncategorizedCategoryName = "non-cat";
     private Integer uncategorizedIdAndSort = 999;
     private Integer highlightIdAndSort = -1;
+    private Integer highlightListIdAndSort = -3;
+    private String defaultListLayout = "All";
+    private Long defaultIdAndSort = 800L;
+    private Map<CategoryType, String> nameMapByType = null;
+    private Map<CategoryType, Long> idMapByType = null;
 
     public String getTestValue() {
         return testValue;
@@ -40,7 +47,7 @@ public class ShoppingListProperties {
     }
 
     public Map<ListType, ListLayoutType> getDefaultLayouts() {
-        this.defaultLayouts = new HashMap<ListType, ListLayoutType>();
+        this.defaultLayouts = new HashMap<>();
         for (Map.Entry<String, String> entry : this.rawDefaultLayouts.entrySet()) {
             ListType listType = ListType.valueOf(entry.getKey());
             ListLayoutType listLayoutType = ListLayoutType.valueOf(entry.getValue());
@@ -82,11 +89,11 @@ public class ShoppingListProperties {
     }
 
     public Long getFrequentIdAndSortAsLong() {
-        return new Long(getFrequentIdAndSort());
+        return Long.valueOf(getFrequentIdAndSort());
     }
 
     public Long getUncategorizedIdAndSortAsLong() {
-        return new Long(getUncategorizedIdAndSort());
+        return Long.valueOf(getUncategorizedIdAndSort());
     }
 
     public Integer getHighlightIdAndSort() {
@@ -94,10 +101,56 @@ public class ShoppingListProperties {
     }
 
     public Long getHighlightIdAndSortAsLong() {
-        return new Long(highlightIdAndSort);
+        return Long.valueOf(highlightIdAndSort);
+    }
+
+    public Long getHighlightListIdAndSortAsLong() {
+        return Long.valueOf(highlightListIdAndSort);
+    }
+
+    public Integer getHighlightListIdAndSort() {
+        return highlightListIdAndSort;
     }
 
     public void setHighlightIdAndSort(Integer highlightIdAndSort) {
         this.highlightIdAndSort = highlightIdAndSort;
+    }
+
+    public ListLayoutType getDefaultListLayoutType() {
+        return ListLayoutType.valueOf(this.defaultListLayout);
+    }
+
+    public String getCategoryNameByType(CategoryType categoryType) {
+        if (nameMapByType == null) {
+            createNameMapByType();
+        }
+        if (nameMapByType.containsKey(categoryType)) {
+        return nameMapByType.get(categoryType);
+        }
+        return null;
+    }
+
+    private void createNameMapByType() {
+            nameMapByType = new EnumMap<CategoryType,String>(CategoryType.class);
+            nameMapByType.put(CategoryType.Frequent,getFrequentCategoryName());
+            nameMapByType.put(CategoryType.UnCategorized,getUncategorizedCategoryName());
+    }
+
+    public Long getIdAndSortByType(CategoryType categoryType) {
+        if (idMapByType == null) {
+            createIdMapByType();
+        }
+        if (idMapByType.containsKey(categoryType)) {
+            return idMapByType.get(categoryType);
+        }
+        return defaultIdAndSort;
+    }
+
+    private void createIdMapByType() {
+        idMapByType = new EnumMap<CategoryType, Long>(CategoryType.class);
+        idMapByType.put(CategoryType.Frequent,getFrequentIdAndSortAsLong());
+        idMapByType.put(CategoryType.UnCategorized,getUncategorizedIdAndSortAsLong());
+        idMapByType.put(CategoryType.Highlight,getHighlightIdAndSortAsLong());
+        idMapByType.put(CategoryType.Highlight,getHighlightListIdAndSortAsLong());
     }
 }
